working properly and giving correct output files