@@ -3,518 +3,484 @@ package com.example.etoll;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 
+// working properly and giving current output files
+
 import java.io.*;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.nio.file.*;
 import java.time.LocalDate;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 
 /**
- * EtollVoucherGenerator
- * - Reads dsr_report.xlsx (xlsx)
- * - Implements the mapping & aggregation logic (Option A)
- * - Produces voucher and diagnostic Excel files
+ * EtollVoucherGenerator - standalone version that reads dsr_report.xlsx from project root,
+ * uses RUN_NUMBER=1 and OUTPUT_ROOT=E-tollAcquiringSettlement/Processing.
+ *
+ * Produces an XLSX with two sheets:
+ *   - Voucher
+ *   - Upload
  *
  * Usage:
- * 1) Place dsr_report.xlsx in project root (or change DSR_PATH)
- * 2) mvn package
- * 3) java -jar target/etoll-voucher-1.0.0-jar-with-dependencies.jar
+ *   mvn package
+ *   java -jar target/etoll-1.0.0.jar
  */
 public class EtollVoucherGenerator {
 
-    // ---------- CONFIG ----------
-    // Path to DSR file (relative to project root)
-    private static final Path DSR_PATH = Paths.get("dsr_report.xlsx");
-
-    // Output root
-    private static final Path OUTPUT_ROOT = Paths.get("E-tollAcquiringSettlement/Processing");
-
-    // Run number (1 => 1C)
+    // ---------------- CONFIG (fixed as requested) ----------------
+    private static final String DSR_FILE = "dsr_report.xlsx";
     private static final int RUN_NUMBER = 1;
+    private static final Path OUTPUT_ROOT = Paths.get("E-tollAcquiringSettlement", "Processing");
 
-    // Column names (exact as in your DSR)
-    private static final String COL_SETTLEMENT_DATE = "Settlement Date";
-    private static final String COL_INWARD_OUTWARD = "Inward/Outward";
+    // Column names (must match Excel)
+    private static final String COL_SETTLEMENT_DATE   = "Settlement Date";
     private static final String COL_TRANSACTION_CYCLE = "Transaction Cycle";
-    private static final String COL_CHANNEL = "Channel";
-    private static final String COL_SETAMTDR = "SETAMTDR";
-    private static final String COL_SETAMTCR = "SETAMTCR";
-    private static final String COL_SERVICE_FEE_DR = "Service Fee Amt Dr";
-    private static final String COL_SERVICE_FEE_CR = "Service Fee Amt Cr";
-    private static final String COL_FINAL_NET_AMT = "Final Net Amt";
+    private static final String COL_TRANSACTION_TYPE  = "Transaction Type";
+    private static final String COL_CHANNEL           = "Channel";
+    private static final String COL_SETAMTDR          = "SETAMTDR";
+    private static final String COL_SETAMTCR          = "SETAMTCR";
+    private static final String COL_SERVICE_FEE_DR    = "Service Fee Amt Dr";
+    private static final String COL_SERVICE_FEE_CR    = "Service Fee Amt Cr";
+    private static final String COL_FINAL_NET_AMT     = "Final Net Amt";
+    private static final String COL_INWARD_OUTWARD    = "Inward/Outward";
 
-    // Template rows
-    private static final List<TemplateRow> TEMPLATE = Arrays.asList(
-            new TemplateRow("0103SLRTGSTRC", "NPCIR5{date_yyyymmdd} {date_ddmmyy}_{cycle} ETCAC", "Final Net Amt"),
+    // TEMPLATE (unchanged)
+    private static final List<TemplateRow> TEMPLATE = List.of(
+            new TemplateRow("0103SLRGTSRC", "NPCIR5{yyyymmdd} {ddmmyy}_{cycle} ETCAC", "Final Net Amt"),
             new TemplateRow("", "", ""),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy}_{cycle}", "NETC Settled Transaction Credit"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} Dr.Adj_{cycle}", "DebitAdjustment"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} GF Accp_{cycle}", "Good Faith Acceptance Credit"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy}_{cycle}", "NETC Settled Transaction"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} Dr.Adj_{cycle}", "Debit Adjustment"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} GF Accp_{cycle}", "Good Faith Acceptance Credit"),
             new TemplateRow("", "", ""),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} Cr.Adj_{cycle}", "Credit Adjustment"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} Chbk_{cycle}", "Chargeback Acceptance"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} GF Acp_{cycle}", "Good Faith Acceptance Debit"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} PrArbtAc_{cycle}", "Pre-Arbitration Acceptance"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} Dr PrArAc_{cycle}", "Pre-Arbitration Deemed Acceptance"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} DrArbtAc_{cycle}", "Debit chargeback deemed Acceptance"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} ArbtAc_{cycle}", "Arbitration Acceptance"),
-            new TemplateRow("0103SLETCACQ", "Etoll acq {date_dd_mm_yy} ArbVer_{cycle}", "Arbitration Vedit"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} Cr.Adj_{cycle}", "Credit Adjustment"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} Chbk_{cycle}", "Chargeback Acceptance"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} GF Accp_{cycle}", "Good Faith Acceptance Debit"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} PrArbtAc_{cycle}", "Pre-Arbitration Acceptance"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} DrPrAbAc_{cycle}", "Pre-Arbitration Deemed Acceptance"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} DrChbAc_{cycle}", "Debit chargeback deemed Acceptance"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} ArbtAc_{cycle}", "Arbitration Acceptance"),
+            new TemplateRow("0103SLETCACQ", "Etoll acq {dd_mm_yy} ArbtVer_{cycle}", "Arbitration Vedict"),
             new TemplateRow("", "", ""),
-            new TemplateRow("0103CNETCACQ", "Etoll acq {date_dd_mm_yy}_{cycle}", "Income Debit"),
-            new TemplateRow("0103SLPPCIGT", "Etoll acq {date_dd_mm_yy}_{cycle}", "GST Debit"),
-            new TemplateRow("0103CNETCACQ", "Etoll acq {date_dd_mm_yy}_{cycle}", "Income Credit"),
-            new TemplateRow("0103SLPPCIGT", "Etoll acq {date_dd_mm_yy}_{cycle}", "GST Credit")
+            new TemplateRow("0103CNETCACQ", "Etoll acq {dd_mm_yy}_{cycle}", "Income Debit"),
+            new TemplateRow("0103SLPPCIGT", "Etoll acq {dd_mm_yy}_{cycle}", "GST Debit"),
+            new TemplateRow("0103CNETCACQ", "Etoll acq {dd_mm_yy}_{cycle}", "Income Credit"),
+            new TemplateRow("0103SLPPCIGT", "Etoll acq {dd_mm_yy}_{cycle}", "GST Credit")
     );
 
-    // mapping of description to default rule (source column + side)
-    private static final Map<String, Rule> ROW_RULES = new LinkedHashMap<>();
-    static {
-        ROW_RULES.put("NETC Settled Transaction Credit", new Rule(COL_SETAMTCR, "credit"));
-        ROW_RULES.put("DebitAdjustment", new Rule(COL_SETAMTCR, "credit"));
-        ROW_RULES.put("Credit Adjustment", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Chargeback Acceptance", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Good Faith Acceptance Credit", new Rule(COL_SETAMTCR, "credit"));
-        ROW_RULES.put("Good Faith Acceptance Debit", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Pre-Arbitration Acceptance", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Pre-Arbitration Deemed Acceptance", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Debit chargeback deemed Acceptance", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Arbitration Acceptance", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Arbitration Vedit", new Rule(COL_SETAMTDR, "debit"));
-        ROW_RULES.put("Income Debit", new Rule(COL_SERVICE_FEE_DR, "debit", true));
-        ROW_RULES.put("GST Debit", new Rule(COL_SERVICE_FEE_DR, "debit", true));
-        ROW_RULES.put("Income Credit", new Rule(COL_SERVICE_FEE_CR, "credit", true));
-        ROW_RULES.put("GST Credit", new Rule(COL_SERVICE_FEE_CR, "credit", true));
-        ROW_RULES.put("Final Net Amt", new Rule(COL_FINAL_NET_AMT, "debit_or_credit"));
+    // RULES (unchanged)
+    private static final Map<String, Rule> RULES = initRules();
+    private static Map<String, Rule> initRules() {
+        Map<String, Rule> m = new HashMap<>();
+        m.put("NETC Settled Transaction", new Rule(List.of("netc settled transaction"), COL_SETAMTCR, "credit", null));
+        m.put("Debit Adjustment", new Rule(List.of("debitadjustment", "debit adjustment"), COL_SETAMTCR, "credit", null));
+        m.put("Good Faith Acceptance Credit", new Rule(List.of("good faith acceptance"), COL_SETAMTCR, "credit", null));
+        m.put("Credit Adjustment", new Rule(List.of("credit adjustment"), COL_SETAMTDR, "debit", null));
+        m.put("Chargeback Acceptance", new Rule(List.of("chargeback acceptance"), COL_SETAMTDR, "debit", null));
+        m.put("Good Faith Acceptance Debit", new Rule(List.of("good faith acceptance"), null, "goodfaith", null));
+        m.put("Pre-Arbitration Acceptance", new Rule(List.of("pre-arbitration acceptance"), COL_SETAMTDR, "debit", null));
+        m.put("Pre-Arbitration Deemed Acceptance", new Rule(List.of("pre-arbitration deemed acceptance"), COL_SETAMTDR, "debit", null));
+        m.put("Debit chargeback deemed Acceptance", new Rule(List.of("debit chargeback deemed acceptance"), COL_SETAMTDR, "debit", null));
+        m.put("Arbitration Acceptance", new Rule(List.of("arbitration acceptance"), COL_SETAMTDR, "debit", null));
+        m.put("Arbitration Vedict", new Rule(List.of("arbitration vedict"), COL_SETAMTDR, "debit", null));
+        m.put("Income Debit", new Rule(null, null, null, "inward_dr"));
+        m.put("GST Debit", new Rule(null, null, null, "inward_dr"));
+        m.put("Income Credit", new Rule(null, null, null, "inward_cr"));
+        m.put("GST Credit", new Rule(null, null, null, "inward_cr"));
+        m.put("Final Net Amt", new Rule(null, null, null, "final"));
+        return m;
     }
 
-    // mapping description -> cycles in DSR to check
-    private static final Map<String, List<String>> DESC_TO_CYCLES = new HashMap<>();
-    static {
-        DESC_TO_CYCLES.put("NETC Settled Transaction Credit", Arrays.asList("NETC Settled Transaction"));
-        DESC_TO_CYCLES.put("DebitAdjustment", Arrays.asList("DebitAdjustment", "Debit Adjustment"));
-        DESC_TO_CYCLES.put("Credit Adjustment", Arrays.asList("Credit Adjustment", "CreditAdjustment"));
-        DESC_TO_CYCLES.put("Chargeback Acceptance", Arrays.asList("Chargeback Acceptance"));
-        DESC_TO_CYCLES.put("Good Faith Acceptance Credit", Arrays.asList("Good Faith Acceptance"));
-        DESC_TO_CYCLES.put("Good Faith Acceptance Debit", Arrays.asList("Good Faith Acceptance"));
-        DESC_TO_CYCLES.put("Pre-Arbitration Acceptance", Arrays.asList("Pre-Arbitration Acceptance"));
-        DESC_TO_CYCLES.put("Pre-Arbitration Deemed Acceptance", Arrays.asList("Pre-Arbitration Deemed Acceptance"));
-        DESC_TO_CYCLES.put("Debit chargeback deemed Acceptance", Arrays.asList("Debit chargeback deemed Acceptance"));
-        DESC_TO_CYCLES.put("Arbitration Acceptance", Arrays.asList("Arbitration Acceptance"));
-        DESC_TO_CYCLES.put("Arbitration Vedit", Arrays.asList("Arbitration Vedit", "Arbitration Vedict", "Arbitration Verdict"));
-    }
-
-    // ---------- Main ----------
     public static void main(String[] args) {
+        System.out.println("Starting EtollVoucherGenerator...");
         try {
-            new EtollVoucherGenerator().run();
-        } catch (Exception e) {
-            System.err.println("Fatal error: " + e.getMessage());
-            e.printStackTrace();
-            System.exit(1);
+            Path dsr = Paths.get(DSR_FILE);
+            if (!Files.exists(dsr)) {
+                System.err.println("Error: " + DSR_FILE + " not found in current directory: " + Paths.get("").toAbsolutePath());
+                System.exit(1);
+            }
+            Map<String,Object> result = generateVoucher(dsr);
+            System.out.println("Result: " + result);
+            if ("ok".equals(result.get("status"))) {
+                System.out.println("Done. Output saved to: " + result.get("path"));
+                System.exit(0);
+            } else {
+                System.err.println("Completed with error. Details: " + result);
+                System.exit(2);
+            }
+        } catch (Throwable t) {
+            t.printStackTrace();
+            System.exit(3);
         }
     }
 
-    private void run() throws Exception {
-        if (!Files.exists(DSR_PATH)) {
-            throw new FileNotFoundException("DSR file not found at: " + DSR_PATH.toAbsolutePath());
+    public static Map<String,Object> generateVoucher(Path dsrPath) throws Exception {
+        // load workbook
+        Workbook wb;
+        try (InputStream is = Files.newInputStream(dsrPath, StandardOpenOption.READ)) {
+            wb = WorkbookFactory.create(is);
         }
 
-        // read DSR into list of maps (rows)
-        List<Map<String, String>> rows = readXlsxToRowMaps(DSR_PATH);
+        Sheet sheet = wb.getSheetAt(0); // first sheet assumed
+        List<Map<String,String>> rows = readSheetToMaps(sheet);
 
-        // detect settlement date
-        LocalDate settlementDate = detectSettlementDate(rows);
-        Map<String,String> dates = buildDatesMap(settlementDate);
-        String cycleSuffix = RUN_NUMBER + "C";
+        // forward-fill TC & TT
+        forwardFill(rows, COL_TRANSACTION_CYCLE);
+        forwardFill(rows, COL_TRANSACTION_TYPE);
 
-        System.out.println("Detected settlement date: " + settlementDate);
-        System.out.println("Cycle suffix: " + cycleSuffix);
+        // find settlement date
+        LocalDate settlement = findSettlementDate(rows);
+        if (settlement == null) settlement = LocalDate.now(ZoneId.systemDefault());
 
-        // compute per-description candidates
-        List<Map<String,Object>> voucherRows = new ArrayList<>();
-        List<Map<String,Object>> diagRows = new ArrayList<>();
+        String yyyymmdd = settlement.format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+        String ddmmyy   = settlement.format(DateTimeFormatter.ofPattern("ddMMyy"));
+        String dd_mm_yy = settlement.format(DateTimeFormatter.ofPattern("dd.MM.yy"));
+        String cycle = RUN_NUMBER + "C";
 
-        for (TemplateRow tr : TEMPLATE) {
-            String desc = tr.description == null ? "" : tr.description;
-            String acct = tr.account == null ? "" : tr.account;
-            String narrT = tr.narration == null ? "" : tr.narration;
+        // normalize helpers
+        for (Map<String,String> r : rows) {
+            r.put("TC", safeTrimLower(r.getOrDefault(COL_TRANSACTION_CYCLE,"")));
+            r.put("TT", safeTrimLower(r.getOrDefault(COL_TRANSACTION_TYPE,"")));
+            r.put("CH", safeTrimLower(r.getOrDefault(COL_CHANNEL,"")));
+        }
 
-            Candidate c = computeCandidates(rows, desc);
-            // pick final debit/credit based on rule
-            Pick pick = pickAmount(c, desc, rows);
+        // Final net amt: last non-empty
+        BigDecimal totalFinal = BigDecimal.ZERO;
+        for (int i = rows.size()-1; i >=0; --i) {
+            String v = rows.get(i).getOrDefault(COL_FINAL_NET_AMT,"").trim();
+            if (!v.isEmpty()) {
+                totalFinal = toDecimal(v);
+                totalFinal = round2(totalFinal);
+                break;
+            }
+        }
+        System.out.println("Final Net Amt (Rightmost+Lowest) = " + totalFinal);
 
-            String narration = "";
-            if (!narrT.isEmpty()) {
-                narration = narrT.replace("{date_ddmmyy}", dates.get("date_ddmmyy"))
-                                  .replace("{date_dd_mm_yy}", dates.get("date_dd_mm_yy"))
-                                  .replace("{date_yyyymmdd}", dates.get("date_yyyymmdd"))
-                                  .replace("{cycle}", cycleSuffix);
+        // Inward GST detection
+        BigDecimal incomeDebit = BigDecimal.ZERO, incomeCredit = BigDecimal.ZERO, gstDebit = BigDecimal.ZERO, gstCredit = BigDecimal.ZERO;
+        for (int i=0;i<rows.size();i++) {
+            String io = rows.get(i).getOrDefault(COL_INWARD_OUTWARD,"");
+            if ("INWARD GST".equalsIgnoreCase(io.trim())) {
+                if (i>0) {
+                    Map<String,String> ra = rows.get(i-1);
+                    incomeDebit = round2(toDecimal(ra.getOrDefault(COL_SERVICE_FEE_DR,"0")));
+                    incomeCredit = round2(toDecimal(ra.getOrDefault(COL_SERVICE_FEE_CR,"0")));
+                }
+                Map<String,String> rg = rows.get(i);
+                gstDebit = round2(toDecimal(rg.getOrDefault(COL_SERVICE_FEE_DR,"0")));
+                gstCredit = round2(toDecimal(rg.getOrDefault(COL_SERVICE_FEE_CR,"0")));
+                break;
+            }
+        }
+        System.out.println("Derived INWARD values -> Income Debit: " + incomeDebit + ", GST Debit: " + gstDebit
+                + ", Income Credit: " + incomeCredit + ", GST Credit: " + gstCredit);
+
+        // Build voucher list
+        List<VoucherRow> voucher = new ArrayList<>();
+        for (TemplateRow t : TEMPLATE) {
+            String acct = t.accountNo;
+            String tmpl = t.template;
+            String desc = t.description;
+
+            String narration = tmpl.replace("{yyyymmdd}", yyyymmdd)
+                    .replace("{ddmmyy}", ddmmyy)
+                    .replace("{dd_mm_yy}", dd_mm_yy)
+                    .replace("{cycle}", cycle);
+
+            if (acct.isEmpty() && desc.isEmpty()) {
+                voucher.add(new VoucherRow("", null, null, narration, desc));
+                continue;
             }
 
-            Map<String,Object> vrow = new LinkedHashMap<>();
-            vrow.put("Account No", acct);
-            vrow.put("Debit", pick.debit);
-            vrow.put("Credit", pick.credit);
-            vrow.put("Narration", narration);
-            vrow.put("Description", desc);
-            voucherRows.add(vrow);
+            Rule rule = RULES.getOrDefault(desc, null);
 
-            // diag
-            Map<String,Object> d = new LinkedHashMap<>();
-            d.put("Account No", acct);
-            d.put("Description", desc);
-            d.put("SETAMTDR", c.setamtDr);
-            d.put("SETAMTCR", c.setamtCr);
-            d.put("FinalNet", c.finalNet);
-            d.put("SvcDr", c.svcDr);
-            d.put("SvcCr", c.svcCr);
-            d.put("ChosenDebit", pick.debit);
-            d.put("ChosenCredit", pick.credit);
-            d.put("Why", pick.reason);
-            diagRows.add(d);
+            if (rule != null && "final".equals(rule.special)) {
+                voucher.add(new VoucherRow(acct, totalFinal.equals(BigDecimal.ZERO) ? null : totalFinal, null, narration, desc));
+                continue;
+            }
+
+            if (rule != null && "inward_dr".equals(rule.special)) {
+                BigDecimal amt = "Income Debit".equals(desc) ? incomeDebit : gstDebit;
+                voucher.add(new VoucherRow(acct, amt.equals(BigDecimal.ZERO) ? null : amt, null, narration, desc));
+                continue;
+            }
+
+            if (rule != null && "inward_cr".equals(rule.special)) {
+                BigDecimal amt = "Income Credit".equals(desc) ? incomeCredit : gstCredit;
+                voucher.add(new VoucherRow(acct, null, amt.equals(BigDecimal.ZERO) ? null : amt, narration, desc));
+                continue;
+            }
+
+            if ("Arbitration Vedict".equals(desc)) {
+                BigDecimal amt = BigDecimal.ZERO;
+                for (Map<String,String> r : rows) {
+                    if ("arbitration vedict".equals(r.getOrDefault("TC","")) &&
+                            List.of("debit","non_fin").contains(r.getOrDefault("TT","").toLowerCase()) &&
+                            r.getOrDefault(COL_CHANNEL,"").trim().length()>0) {
+                        amt = amt.add(toDecimal(r.getOrDefault(COL_SETAMTDR,"0")));
+                    }
+                }
+                amt = round2(amt);
+                voucher.add(new VoucherRow(acct, amt.equals(BigDecimal.ZERO) ? null : amt, null, narration, desc));
+                System.out.println("Arbitration Vedict: summed SETAMTDR = " + amt);
+                continue;
+            }
+
+            List<String> cycles = rule != null && rule.cycles != null ? rule.cycles : List.of();
+            List<Map<String,String>> sel = new ArrayList<>();
+            for (Map<String,String> r : rows) {
+                if (cycles.contains(r.getOrDefault("TC",""))) sel.add(r);
+            }
+
+            String sumCol = rule != null ? rule.sumCol : null;
+            String side = rule != null ? rule.side : "debit";
+
+            if ("goodfaith".equals(side)) {
+                BigDecimal dr = BigDecimal.ZERO, cr = BigDecimal.ZERO;
+                for (Map<String,String> r : sel) {
+                    dr = dr.add(toDecimal(r.getOrDefault(COL_SETAMTDR,"0")));
+                    cr = cr.add(toDecimal(r.getOrDefault(COL_SETAMTCR,"0")));
+                }
+                dr = round2(dr); cr = round2(cr);
+                if (dr.compareTo(BigDecimal.ZERO) != 0) voucher.add(new VoucherRow(acct, dr, null, narration, desc));
+                else if (cr.compareTo(BigDecimal.ZERO) != 0) voucher.add(new VoucherRow(acct, null, cr, narration, desc));
+                else voucher.add(new VoucherRow(acct, null, null, narration, desc));
+                continue;
+            }
+
+            BigDecimal amt = BigDecimal.ZERO;
+            if (sumCol != null) {
+                for (Map<String,String> r : sel) {
+                    amt = amt.add(toDecimal(r.getOrDefault(sumCol,"0")));
+                }
+                amt = round2(amt);
+            }
+
+            if ("credit".equals(side)) voucher.add(new VoucherRow(acct, null, amt.equals(BigDecimal.ZERO) ? null : amt, narration, desc));
+            else voucher.add(new VoucherRow(acct, amt.equals(BigDecimal.ZERO) ? null : amt, null, narration, desc));
         }
 
-        // if Final Net Amt negative -> terminate (per spec)
-        BigDecimal totalFinalNet = computeTotalFinalNet(rows);
-        if (totalFinalNet.compareTo(BigDecimal.ZERO) < 0) {
-            System.err.println("Final Net Amt negative (" + totalFinalNet + "). Terminating and notifying process owner.");
-            System.exit(2);
+        // Build upload rows
+        List<List<Object>> uploadRows = new ArrayList<>();
+        uploadRows.add(List.of("Account No","C/D","Amount","Narration"));
+        for (VoucherRow vr : voucher) {
+            BigDecimal d = vr.debit;
+            BigDecimal c = vr.credit;
+            String cd;
+            BigDecimal amount;
+            if (d != null && d.compareTo(BigDecimal.ZERO) != 0) { cd = "D"; amount = d; }
+            else if (c != null && c.compareTo(BigDecimal.ZERO) != 0) { cd = "C"; amount = c; }
+            else { cd = ""; amount = null; }
+            if (amount != null) uploadRows.add(List.of(vr.accountNo, cd, amount.doubleValue(), vr.narration));
         }
 
-        // build output folder
-        Path outFolder = OUTPUT_ROOT.resolve(settlementDate.format(DateTimeFormatter.ofPattern("yyyy")))
-                .resolve(settlementDate.format(DateTimeFormatter.ofPattern("MM")))
-                .resolve(settlementDate.format(DateTimeFormatter.ofPattern("dd")));
-        Files.createDirectories(outFolder);
+        // TALLY
+        BigDecimal dTotal = BigDecimal.ZERO, cTotal = BigDecimal.ZERO;
+        for (VoucherRow vr : voucher) {
+            if (vr.debit != null) dTotal = dTotal.add(vr.debit);
+            if (vr.credit != null) cTotal = cTotal.add(vr.credit);
+        }
+        dTotal = round2(dTotal); cTotal = round2(cTotal);
+        System.out.println("Voucher totals -> Debit: " + dTotal + " Credit: " + cTotal);
 
-        // write voucher and diagnostic
-        String dtStr = settlementDate.format(DateTimeFormatter.ofPattern("ddMMyy"));
-        Path voucherFile = outFolder.resolve("ETOLL ACQUIRING VOUCHER_" + dtStr + "_N" + RUN_NUMBER + ".xlsx");
-        Path diagFile = outFolder.resolve("voucher_diagnostic_" + dtStr + "_N" + RUN_NUMBER + ".xlsx");
+        // create output folder
+        Path folder = OUTPUT_ROOT.resolve(String.valueOf(settlement.getYear()))
+                .resolve(String.format("%02d", settlement.getMonthValue()))
+                .resolve(String.format("%02d", settlement.getDayOfMonth()));
+        Files.createDirectories(folder);
 
-        writeRowsToXlsx(voucherRows, Arrays.asList("Account No","Debit","Credit","Narration","Description"), voucherFile);
-        writeRowsToXlsx(diagRows, Arrays.asList("Account No","Description","SETAMTDR","SETAMTCR","FinalNet","SvcDr","SvcCr","ChosenDebit","ChosenCredit","Why"), diagFile);
+        String ddmmyyStr = ddmmyy;
+        Path file = folder.resolve("ETOLL_ACQUIRING_VOUCHER_" + ddmmyyStr + "_N" + RUN_NUMBER + ".xlsx");
+        Path errFile = folder.resolve("ERROR_ETOLL_ACQUIRING_VOUCHER_" + ddmmyyStr + "_N" + RUN_NUMBER + ".xlsx");
 
-        System.out.println("Voucher saved to: " + voucherFile.toAbsolutePath());
-        System.out.println("Diagnostic saved to: " + diagFile.toAbsolutePath());
+        if (dTotal.compareTo(cTotal) != 0) {
+            // write error workbook
+            try (Workbook out = new XSSFWorkbook()) {
+                writeVoucherSheet(out, voucher);
+                writeUploadSheet(out, uploadRows);
+                try (OutputStream os = Files.newOutputStream(errFile, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+                    out.write(os);
+                }
+            }
+            return Map.of("status","error","message","Debit and credit not tallied","path",errFile.toString(),"debit",dTotal,"credit",cTotal);
+        }
+
+        try (Workbook out = new XSSFWorkbook()) {
+            writeVoucherSheet(out, voucher);
+            writeUploadSheet(out, uploadRows);
+            try (OutputStream os = Files.newOutputStream(file, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+                out.write(os);
+            }
+        }
+
+        return Map.of("status","ok","path",file.toString(),"debit",dTotal,"credit",cTotal);
     }
 
     // ---------- helpers ----------
-
-    private List<Map<String,String>> readXlsxToRowMaps(Path xlsx) throws IOException {
+    private static List<Map<String,String>> readSheetToMaps(Sheet sheet) {
         List<Map<String,String>> rows = new ArrayList<>();
-        try (InputStream in = Files.newInputStream(xlsx);
-             Workbook wb = new XSSFWorkbook(in)) {
-            Sheet sheet = wb.getSheetAt(0);
-
-            Iterator<Row> it = sheet.iterator();
-            if (!it.hasNext()) return rows;
-            Row header = it.next();
-            List<String> headers = new ArrayList<>();
-            for (Cell c : header) {
-                headers.add(getCellString(c).trim());
+        Iterator<Row> it = sheet.iterator();
+        if (!it.hasNext()) return rows;
+        Row header = it.next();
+        List<String> headers = new ArrayList<>();
+        for (Cell c : header) {
+            headers.add(c.getStringCellValue().trim());
+        }
+        while (it.hasNext()) {
+            Row r = it.next();
+            Map<String,String> map = new HashMap<>();
+            for (int i=0;i<headers.size();i++) {
+                Cell cell = r.getCell(i, Row.MissingCellPolicy.CREATE_NULL_AS_BLANK);
+                String val = cellToString(cell);
+                map.put(headers.get(i), val);
             }
-
-            while (it.hasNext()) {
-                Row r = it.next();
-                Map<String,String> map = new LinkedHashMap<>();
-                for (int i=0;i<headers.size();i++) {
-                    Cell cell = r.getCell(i, Row.MissingCellPolicy.RETURN_BLANK_AS_NULL);
-                    String val = cell == null ? "" : getCellString(cell);
-                    map.put(headers.get(i).trim(), val);
-                }
-                rows.add(map);
-            }
+            rows.add(map);
         }
         return rows;
     }
 
-    private String getCellString(Cell c) {
-        if (c == null) return "";
-        switch (c.getCellType()) {
-            case STRING: return c.getStringCellValue();
+    private static String cellToString(Cell cell) {
+        if (cell == null) return "";
+        switch (cell.getCellType()) {
+            case STRING: return cell.getStringCellValue();
             case NUMERIC:
-                if (DateUtil.isCellDateFormatted(c)) {
-                    return c.getLocalDateTimeCellValue().toLocalDate().toString();
+                if (DateUtil.isCellDateFormatted(cell)) {
+                    return cell.getLocalDateTimeCellValue().toLocalDate().toString();
                 } else {
-                    double d = c.getNumericCellValue();
-                    // remove trailing .0 if integer-like
-                    if (d == Math.floor(d)) return String.valueOf((long)d);
-                    return String.valueOf(d);
+                    return BigDecimal.valueOf(cell.getNumericCellValue()).stripTrailingZeros().toPlainString();
                 }
-            case BOOLEAN: return String.valueOf(c.getBooleanCellValue());
+            case BOOLEAN: return Boolean.toString(cell.getBooleanCellValue());
+            case BLANK: return "";
             case FORMULA:
                 try {
-                    return c.getStringCellValue();
+                    if (DateUtil.isCellDateFormatted(cell)) {
+                        return cell.getLocalDateTimeCellValue().toLocalDate().toString();
+                    }
+                    return cell.getStringCellValue();
                 } catch (Exception e) {
-                    double d = c.getNumericCellValue();
-                    if (d == Math.floor(d)) return String.valueOf((long)d);
-                    return String.valueOf(d);
+                    return cell.getCellFormula();
                 }
-            default: return "";
+            default: return cell.toString();
         }
     }
 
-    private LocalDate detectSettlementDate(List<Map<String,String>> rows) {
-        // Try to find from first non-empty Settlement Date column
+    private static void forwardFill(List<Map<String,String>> rows, String column) {
+        String last = "";
         for (Map<String,String> r : rows) {
-            if (r.containsKey(COL_SETTLEMENT_DATE)) {
-                String val = r.get(COL_SETTLEMENT_DATE);
-                if (val != null && !val.trim().isEmpty()) {
-                    // try known patterns: dd-MM-yyyy or variants
-                    try {
-                        DateTimeFormatter f = DateTimeFormatter.ofPattern("dd-MM-yyyy");
-                        return LocalDate.parse(val.trim(), f);
-                    } catch (Exception ignored) {}
-                    try {
-                        DateTimeFormatter f2 = DateTimeFormatter.ofPattern("dd.MM.yyyy");
-                        return LocalDate.parse(val.trim(), f2);
-                    } catch (Exception ignored) {}
-                    // fallback: parse by splitting
-                    try {
-                        // support dd-MM-yy etc
-                        String s = val.trim().replace(".", "-");
-                        String[] parts = s.split("-");
-                        if (parts.length >= 3) {
-                            int day = Integer.parseInt(parts[0]);
-                            int month = Integer.parseInt(parts[1]);
-                            int year = Integer.parseInt(parts[2].length() == 2 ? ("20"+parts[2]) : parts[2]);
-                            return LocalDate.of(year, month, day);
-                        }
-                    } catch (Exception ignored) {}
-                }
-            }
+            String v = r.getOrDefault(column,"");
+            if (v == null) v = "";
+            v = v.trim();
+            if (!v.isEmpty()) last = v;
+            else r.put(column, last);
         }
-        // fallback: search first 6 columns of first row for date-like value
-        if (!rows.isEmpty()) {
-            Map<String,String> first = rows.get(0);
-            int i=0;
-            for (String key : first.keySet()) {
-                if (i++ > 5) break;
-                String v = first.get(key);
-                if (v != null && !v.trim().isEmpty()) {
-                    try {
-                        String s = v.trim().replace(".", "-");
-                        String[] parts = s.split("-");
-                        if (parts.length >= 3) {
-                            int day = Integer.parseInt(parts[0]);
-                            int month = Integer.parseInt(parts[1]);
-                            int year = Integer.parseInt(parts[2].length() == 2 ? ("20"+parts[2]) : parts[2]);
-                            return LocalDate.of(year, month, day);
-                        }
-                    } catch (Exception ignored) {}
-                }
-            }
-        }
-        // if not found, use today
-        return LocalDate.now();
     }
 
-    private Map<String,String> buildDatesMap(LocalDate d) {
-        Map<String,String> m = new HashMap<>();
-        m.put("date_ddmmyy", d.format(DateTimeFormatter.ofPattern("ddMMyy")));
-        m.put("date_dd_mm_yy", d.format(DateTimeFormatter.ofPattern("dd.MM.yy")));
-        m.put("date_yyyymmdd", d.format(DateTimeFormatter.ofPattern("yyyyMMdd")));
-        return m;
-    }
-
-    private Candidate computeCandidates(List<Map<String,String>> rows, String desc) {
-        Candidate c = new Candidate();
-        if (desc == null || desc.trim().isEmpty()) {
-            return c;
-        }
-        List<String> cycles = DESC_TO_CYCLES.getOrDefault(desc, Collections.emptyList());
-        BigDecimal setDr = BigDecimal.ZERO, setCr = BigDecimal.ZERO, fn = BigDecimal.ZERO, sdr = BigDecimal.ZERO, scr = BigDecimal.ZERO;
-
-        for (String cyc : cycles) {
-            // sum only rows where Channel is non-empty and transaction cycle matches (case-insensitive)
-            for (Map<String,String> r : rows) {
-                String cycleVal = r.getOrDefault(COL_TRANSACTION_CYCLE, "");
-                String channelVal = r.getOrDefault(COL_CHANNEL, "");
-                if (cycleVal == null) cycleVal = "";
-                if (channelVal == null) channelVal = "";
-                if (!channelVal.trim().isEmpty() && cycleVal.trim().equalsIgnoreCase(cyc.trim())) {
-                    setDr = setDr.add(parseNumberSafe(r.getOrDefault(COL_SETAMTDR, "0")));
-                    setCr = setCr.add(parseNumberSafe(r.getOrDefault(COL_SETAMTCR, "0")));
-                    fn = fn.add(parseNumberSafe(r.getOrDefault(COL_FINAL_NET_AMT, "0")));
-                    sdr = sdr.add(parseNumberSafe(r.getOrDefault(COL_SERVICE_FEE_DR, "0")));
-                    scr = scr.add(parseNumberSafe(r.getOrDefault(COL_SERVICE_FEE_CR, "0")));
-                }
-            }
-        }
-
-        // special for Income/GST: sum across rows where Inward/Outward contains INWARD
-        if (desc.equals("Income Debit") || desc.equals("GST Debit") || desc.equals("Income Credit") || desc.equals("GST Credit")) {
-            BigDecimal sdr_i = BigDecimal.ZERO, scr_i = BigDecimal.ZERO;
-            for (Map<String,String> r : rows) {
-                String inout = r.getOrDefault(COL_INWARD_OUTWARD, "");
-                if (inout != null && inout.toUpperCase().contains("INWARD")) {
-                    sdr_i = sdr_i.add(parseNumberSafe(r.getOrDefault(COL_SERVICE_FEE_DR, "0")));
-                    scr_i = scr_i.add(parseNumberSafe(r.getOrDefault(COL_SERVICE_FEE_CR, "0")));
-                }
-            }
-            sdr = sdr_i;
-            scr = scr_i;
-        }
-
-        c.setamtDr = setDr;
-        c.setamtCr = setCr;
-        c.finalNet = fn;
-        c.svcDr = sdr;
-        c.svcCr = scr;
-        return c;
-    }
-
-    private Pick pickAmount(Candidate c, String desc, List<Map<String,String>> rows) {
-        if (desc == null || desc.trim().isEmpty()) {
-            return new Pick(BigDecimal.ZERO, BigDecimal.ZERO, "empty_desc");
-        }
-        Rule r = ROW_RULES.get(desc);
-        if (r == null) {
-            return new Pick(BigDecimal.ZERO, BigDecimal.ZERO, "no_rule");
-        }
-
-        if (desc.equals("Final Net Amt")) {
-            BigDecimal totalFn = computeTotalFinalNet(rows);
-            if (totalFn.compareTo(BigDecimal.ZERO) < 0) {
-                throw new RuntimeException("Final Net Amt negative: " + totalFn);
-            }
-            return new Pick(totalFn.setScale(2, BigDecimal.ROUND_HALF_UP), BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), "FinalNet_used");
-        }
-
-        if (r.inwardOnly) {
-            if ("debit".equalsIgnoreCase(r.side)) {
-                return new Pick(c.svcDr.setScale(2, BigDecimal.ROUND_HALF_UP), BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), "SvcDr_inward");
-            } else {
-                return new Pick(BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), c.svcCr.setScale(2, BigDecimal.ROUND_HALF_UP), "SvcCr_inward");
-            }
-        }
-
-        if (COL_SETAMTDR.equals(r.amountColumn)) {
-            if ("debit".equalsIgnoreCase(r.side)) {
-                return new Pick(c.setamtDr.setScale(2, BigDecimal.ROUND_HALF_UP), BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), "SETAMTDR_used");
-            } else {
-                return new Pick(BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), c.setamtDr.setScale(2, BigDecimal.ROUND_HALF_UP), "SETAMTDR_used_as_credit");
-            }
-        } else if (COL_SETAMTCR.equals(r.amountColumn)) {
-            if ("credit".equalsIgnoreCase(r.side)) {
-                return new Pick(BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), c.setamtCr.setScale(2, BigDecimal.ROUND_HALF_UP), "SETAMTCR_used");
-            } else {
-                return new Pick(c.setamtCr.setScale(2, BigDecimal.ROUND_HALF_UP), BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), "SETAMTCR_used_as_debit");
-            }
-        } else {
-            // fallback use amount column if present in candidate
-            if (COL_SERVICE_FEE_DR.equals(r.amountColumn)) {
-                if ("debit".equalsIgnoreCase(r.side)) {
-                    return new Pick(c.svcDr.setScale(2, BigDecimal.ROUND_HALF_UP), BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), "SvcDr_used");
-                } else {
-                    return new Pick(BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), c.svcDr.setScale(2, BigDecimal.ROUND_HALF_UP), "SvcDr_used_as_credit");
-                }
-            } else if (COL_SERVICE_FEE_CR.equals(r.amountColumn)) {
-                if ("credit".equalsIgnoreCase(r.side)) {
-                    return new Pick(BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), c.svcCr.setScale(2, BigDecimal.ROUND_HALF_UP), "SvcCr_used");
-                } else {
-                    return new Pick(c.svcCr.setScale(2, BigDecimal.ROUND_HALF_UP), BigDecimal.ZERO.setScale(2, BigDecimal.ROUND_HALF_UP), "SvcCr_used_as_debit");
-                }
-            }
-        }
-        return new Pick(BigDecimal.ZERO, BigDecimal.ZERO, "fallback");
-    }
-
-    private BigDecimal computeTotalFinalNet(List<Map<String,String>> rows) {
-        BigDecimal total = BigDecimal.ZERO;
+    private static LocalDate findSettlementDate(List<Map<String,String>> rows) {
         for (Map<String,String> r : rows) {
-            total = total.add(parseNumberSafe(r.getOrDefault(COL_FINAL_NET_AMT, "0")));
-        }
-        return total;
-    }
-
-    private BigDecimal parseNumberSafe(String s) {
-        if (s == null) return BigDecimal.ZERO;
-        String cleaned = s.trim().replace(",", "");
-        if (cleaned.isEmpty()) return BigDecimal.ZERO;
-        try {
-            return new BigDecimal(cleaned);
-        } catch (Exception e) {
+            String v = r.getOrDefault(COL_SETTLEMENT_DATE,"").trim();
+            if (v.isEmpty()) continue;
             try {
-                Double d = Double.parseDouble(cleaned);
+                if (v.matches("\\d{4}-\\d{2}-\\d{2}")) return LocalDate.parse(v, DateTimeFormatter.ISO_LOCAL_DATE);
+                if (v.matches("\\d{2}-\\d{2}-\\d{4}")) return LocalDate.parse(v, DateTimeFormatter.ofPattern("dd-MM-yyyy"));
+                if (v.matches("\\d{2}/\\d{2}/\\d{4}")) return LocalDate.parse(v, DateTimeFormatter.ofPattern("dd/MM/yyyy"));
+                return LocalDate.parse(v);
+            } catch (Exception ignored) {}
+        }
+        return null;
+    }
+
+    private static BigDecimal toDecimal(String s) {
+        if (s == null) return BigDecimal.ZERO;
+        s = s.trim().replace(",","");
+        if (s.isEmpty() || "nan".equalsIgnoreCase(s)) return BigDecimal.ZERO;
+        try {
+            return new BigDecimal(s);
+        } catch (Exception ex) {
+            try {
+                double d = Double.parseDouble(s);
                 return BigDecimal.valueOf(d);
-            } catch (Exception ex) {
+            } catch (Exception ex2) {
                 return BigDecimal.ZERO;
             }
         }
     }
 
-    private void writeRowsToXlsx(List<Map<String,Object>> rows, List<String> headers, Path out) throws IOException {
-        try (Workbook wb = new XSSFWorkbook()) {
-            Sheet s = wb.createSheet("Sheet1");
-            Row h = s.createRow(0);
-            for (int i=0;i<headers.size();i++) {
-                Cell c = h.createCell(i);
-                c.setCellValue(headers.get(i));
-            }
-            int rnum = 1;
-            for (Map<String,Object> rmap : rows) {
-                Row r = s.createRow(rnum++);
-                for (int i=0;i<headers.size();i++) {
-                    Object v = rmap.getOrDefault(headers.get(i), "");
-                    Cell c = r.createCell(i);
-                    if (v instanceof Number) {
-                        c.setCellValue(((Number) v).doubleValue());
-                    } else {
-                        c.setCellValue(String.valueOf(v));
-                    }
-                }
-            }
-            // autosize columns modestly
-            for (int i=0;i<headers.size();i++) s.autoSizeColumn(i);
-            try (OutputStream outStream = Files.newOutputStream(out)) {
-                wb.write(outStream);
-            }
-        }
+    private static BigDecimal round2(BigDecimal d) {
+        return d.setScale(2, RoundingMode.HALF_UP);
     }
 
-    // ---------- helper data classes ----------
+    private static String safeTrimLower(String s) {
+        if (s == null) return "";
+        return s.trim().toLowerCase();
+    }
+
+    private static void writeVoucherSheet(Workbook wb, List<VoucherRow> voucher) {
+        Sheet sh = wb.createSheet("Voucher");
+        Row header = sh.createRow(0);
+        header.createCell(0).setCellValue("Account No");
+        header.createCell(1).setCellValue("Debit");
+        header.createCell(2).setCellValue("Credit");
+        header.createCell(3).setCellValue("Narration");
+        header.createCell(4).setCellValue("Description");
+
+        int r = 1;
+        for (VoucherRow vr : voucher) {
+            Row row = sh.createRow(r++);
+            row.createCell(0).setCellValue(vr.accountNo);
+            if (vr.debit != null) row.createCell(1).setCellValue(vr.debit.doubleValue());
+            if (vr.credit != null) row.createCell(2).setCellValue(vr.credit.doubleValue());
+            row.createCell(3).setCellValue(vr.narration);
+            row.createCell(4).setCellValue(vr.description);
+        }
+        autosizeColumns(sh, 5);
+    }
+
+    private static void writeUploadSheet(Workbook wb, List<List<Object>> uploadRows) {
+        Sheet sh = wb.createSheet("Upload");
+        int r = 0;
+        for (List<Object> rowData : uploadRows) {
+            Row row = sh.createRow(r++);
+            for (int c=0;c<rowData.size();c++) {
+                Object o = rowData.get(c);
+                Cell cell = row.createCell(c);
+                if (o == null) cell.setBlank();
+                else if (o instanceof Number) cell.setCellValue(((Number) o).doubleValue());
+                else cell.setCellValue(o.toString());
+            }
+        }
+        autosizeColumns(sh, uploadRows.isEmpty() ? 4 : uploadRows.get(0).size());
+    }
+
+    private static void autosizeColumns(Sheet sh, int n) {
+        for (int i=0;i<n;i++) sh.autoSizeColumn(i);
+    }
+
+    // inner helper classes
     private static class TemplateRow {
-        String account;
-        String narration;
-        String description;
-        TemplateRow(String account, String narration, String description) {
-            this.account = account;
-            this.narration = narration;
-            this.description = description;
+        final String accountNo;
+        final String template;
+        final String description;
+        TemplateRow(String accountNo, String template, String description) {
+            this.accountNo = accountNo; this.template = template; this.description = description;
         }
     }
-
     private static class Rule {
-        String amountColumn;
-        String side;
-        boolean inwardOnly;
-        Rule(String amountColumn, String side) { this(amountColumn, side, false); }
-        Rule(String amountColumn, String side, boolean inwardOnly) {
-            this.amountColumn = amountColumn;
-            this.side = side;
-            this.inwardOnly = inwardOnly;
+        final List<String> cycles;
+        final String sumCol;
+        final String side;
+        final String special;
+        Rule(List<String> cycles, String sumCol, String side, String special) {
+            this.cycles = cycles; this.sumCol = sumCol; this.side = side; this.special = special;
         }
     }
-
-    private static class Candidate {
-        BigDecimal setamtDr = BigDecimal.ZERO;
-        BigDecimal setamtCr = BigDecimal.ZERO;
-        BigDecimal finalNet = BigDecimal.ZERO;
-        BigDecimal svcDr = BigDecimal.ZERO;
-        BigDecimal svcCr = BigDecimal.ZERO;
-    }
-
-    private static class Pick {
-        BigDecimal debit;
-        BigDecimal credit;
-        String reason;
-        Pick(BigDecimal debit, BigDecimal credit, String reason) {
-            this.debit = debit;
-            this.credit = credit;
-            this.reason = reason;
+    private static class VoucherRow {
+        final String accountNo;
+        final BigDecimal debit;
+        final BigDecimal credit;
+        final String narration;
+        final String description;
+        VoucherRow(String accountNo, BigDecimal debit, BigDecimal credit, String narration, String description) {
+            this.accountNo = accountNo; this.debit = debit; this.credit = credit; this.narration = narration; this.description = description;
         }
     }
 }
